# NLPoker

./: CMakeLists.txt  README.md
include/: Card.h
include/core/: Card.h  Deck.h  Evaluator.h  GameState.h  Hand.h  Player.h
src/: Card.cpp  Deck.cpp  Evaluator.cpp  GameState.cpp  Hand.cpp  Player.cpp  main.cpp
